--- a/Catalog.html
+++ b/Catalog.html
@@ -7,7 +7,17 @@
   </head>
   <body>
 
-    <p>Нердс</p>
+    <header>
+
+    </header>
+    
+    <main>
+
+    </main>
+
+    <footer>
+
+    </footer>
 
   </body>
 </html>
