--- a/index.html
+++ b/index.html
@@ -6,8 +6,152 @@
     <link rel="stylesheet" href="css/normalize.css">
   </head>
   <body>
+    <header>
+      <nav>
+        <img src="img/nerds-logo.svg" width="160" heigth="65" alt="Логотип Нёрдс">
+        <ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <a href="#">Корзина</a>
+       </nav>
+       <section>
+          <h2>Слайдер</h2>
+          <p>Долго, дорого, скурпулезно</p>
+          <p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
+          <a href="#">Узнать больше</a>
+          <img src="img/index_slide1.jpg" width="760" heigth="431" alt="Слайд 1">
+       </section>
+      <!-- слайдер 2 + слайдер 3
+        <section>
+          <h2>Слайдер</h2>
+          <p>Любим математику как никто другой</p>
+          <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
+          <a href="#">Узнать больше</a>
+          <img src="img/index_slide2.jpg" width="663" heigth="430" alt="Слайд 2">
+       </section>
+       <section>
+          <h2>Слайдер</h2>
+          <p>Только ночь, только хардкор</p>
+          <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
+          <a href="#">Узнать больше</a>
+          <img src="img/index_slide3.jpg" width="759" heigth="411" alt="Слайд 2">
+       </section>
+      -->
+    </header>
 
-    <p>Нердс</p>
+    <main>
+      <section>
+        <h2>Каталог</h2>
+        <ul>
+          <li>
+            <img src="img/illustration-1 1.jpg" width="300" heigth="146" alt="Вэб-сайты">
+            <h3>Вэб-сайты</h3>
+            <p>Мир никогда не будет прежним после того как увидит наш сайт!</p>
+            <a href="#">Заказать</a>
+          </li>
+          <li>
+            <img src="img/illustration-2 1.jpg" width="300" heigth="146" alt="Приложения">
+            <h3>Приложения</h3>
+            <p>Покорите топ-10 приложений в AppStore и Google Play</p>
+            <a href="#">Заказать</a>
+          </li>
+          <li>
+            <img src="img/illustration-3 1.jpg" width="300" heigth="146" alt="Презентации">
+            <h3>Презентации</h3>
+            <p> Вы даже не подозреваете, насколько вы изумительны!</p>
+            <a href="#">Заказать</a>
+          </li>
+        </ul>
+      </section>
+      <section>
+        <h2>Описание</h2>
+        <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+        <p>Исповедуем принципы минимализма и чистоты. Ставим математически</p>
+        <p>Выполняем заказы на разработку</p>
+        <ul>
+          <li>Веб-сайтов любой сложности</li>
+          <li>Мобильных приложений для iOS и Android</li>
+          <li>Слайдшоу и видео для корпоративных презентаций</li>
+        </ul>
+        <div>
+          <img src="img/nerds-illustration 1.jpg" width="360" heigth="140" alt="Нёрдс">
+          <p>С 2004 года Любим точность во всем:</p>
+          <ul>
+            <li>
+              146 % <p>Уровень самоотдачи</p>
+            </li>
+            <li>
+              100 %
+              <p>Уровень самоотдачи</p>
+            </li>
+            <li>
+              50 %
+              <p>Минимальная предоплата</p>
+            </li>
+          </ul>
+        </div>
+      </section>
+      <section>
+        <h2>Партнеры</h2>
+        <ul>
+          <li>
+            <img src="img/Group 5.svg" width="199" heigth="68" alt="Логотип HTML academy">
+          </li>
+          <li>
+            <img src="img/logo-2 1.svg" width="209" heigth="90" alt="Логотип Барбершоп Бородинский">
+          </li>
+          <li>
+            <img src="img/logo-3 1.svg" width="185" heigth="52" alt="Логотип Пинк">
+          </li>
+          <li>
+            <img src="img/logo-4 1.svg" width="173" heigth="84" alt="Логотип Mishka">
+          </li>
+        </ul>
+      </section>
+    </main>
 
+    <footer>
+      <section>
+        <h2>Как нас найти</h2>
+        <!--Карта-->
+        <div>
+          <p>Nerds design studio</p>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          тел. +7(812)275-75-75</p>
+          <button type="button">Напишите нам</button>
+          <!--
+            Псевдоэлемент
+            <img src="img/map-marker1.svg" width="231" heigth="190" alt="расположение офиса Nerds на карте">
+          -->
+        </div>
+      </section>
+      <section>
+        <h2>Странички в соц сетях</h2>
+        <ul>
+          <li>
+            <img src="img/Vk_logo.svg" width="26" height="15" alt="Nerds в Контакте">
+            <span>Vk</span>
+          </li>
+          <li>
+            <img src="img/f_logo.svg" width="12" height="22" alt="Nerds на Фэйсбук">
+            <span>F</span>
+          </li>
+          <li>
+            <img src="img/insta-logo.svg" width="21" height="21" alt="Nerds В Instagram">
+            <span>I</span>
+          </li>
+        </ul>
+        <p>Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </section>
+    </footer>
+    <section>
+      <h2>Напишите нам</h2>
+      <!--Форма-->
+      <button type="button">Отправить</button>
+    </section>
   </body>
 </html>
