--- a/Catalog.html
+++ b/Catalog.html
@@ -8,16 +8,102 @@
   <body>
 
     <header>
-
+      <nav>
+        <img src="img/nerds-logo.svg" width="160" heigth="65" alt="Логотип Нёрдс">
+        <ul>
+          <li><a href="#">Студия</a></li>
+          <li><a href="#">Клиенты</a></li>
+          <li><a href="#">Магазин</a></li>
+          <li><a href="#">Контакты</a></li>
+        </ul>
+        <a href="#">Корзина</a>
+       </nav>
+       <p>Магазин готовых шаблонов</p>
     </header>
     
     <main>
-
+      <section>
+        <h2>Форма</h2>
+        <!--Форма-->
+      </section>
+      <section>
+        <h2>Сортировка</h2>
+        <span>Соритровать:</span>
+        <span>По цене</span>
+        <span>По типу</span>
+        <span>По названию</span>
+        <!--кнопки-->
+      </section>
+      <section>
+        <h2>Каталог</h2>
+        <ul>
+          <li>
+            <img src="img/Goods1.jpg" width="360" heigth="576" alt="Сайт Седона">
+          </li>
+          <li>
+            <img src="img/Goods2.jpg" width="360" heigth="576" alt="Сайт Pink">
+          </li>
+          <li>
+            <img src="img/Goods3.jpg" width="360" heigth="576" alt="Сайт Барбершоп">
+          </li>
+          <li>
+            <img src="img/Goods4.jpg" width="360" heigth="576" alt="Сайт Mishka">
+          </li>
+          <li>
+            <img src="img/Goods5.jpg" width="360" heigth="576" alt="Сайт для обучения">
+          </li>
+          <li>
+            <img src="img/Goods6.jpg" width="360" heigth="576" alt="Сайт компании Кваст">
+          </li>
+        </ul>
+        <ul>
+          <li><a>1</a></li>
+          <li><a href="#">2</a></li>
+          <li><a href="#">3</a></li>
+          <li><a href="#">Следующая</a></li>
+        </ul>
+      </section>
     </main>
 
     <footer>
-
+      <section>
+        <h2>Как нас найти</h2>
+        <!--Карта-->
+        <div>
+          <p>Nerds design studio</p>
+          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          тел. +7(812)275-75-75</p>
+          <button type="button">Напишите нам</button>
+          <!--
+            Псевдоэлемент
+            <img src="img/map-marker1.svg" width="231" heigth="190" alt="расположение офиса Nerds на карте">
+          -->
+        </div>
+      </section>
+      <section>
+        <h2>Странички в соц сетях</h2>
+        <ul>
+          <li>
+            <img src="img/Vk_logo.svg" width="26" height="15" alt="Nerds в Контакте">
+            <span>Vk</span>
+          </li>
+          <li>
+            <img src="img/f_logo.svg" width="12" height="22" alt="Nerds на Фэйсбук">
+            <span>F</span>
+          </li>
+          <li>
+            <img src="img/insta-logo.svg" width="21" height="21" alt="Nerds В Instagram">
+            <span>I</span>
+          </li>
+        </ul>
+        <p>Давайте дружить, это выгодно!</p>
+        <p>Скидка 10% для друзей из социальных сетей.</p>
+      </section>
     </footer>
-
+    <section>
+      <h2>Напишите нам</h2>
+      <!--Форма-->
+      <button type="button">Отправить</button>
+    </section>
   </body>
 </html>
