--- a/Catalog.html
+++ b/Catalog.html
@@ -16,7 +16,7 @@
           <li><a href="#">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <a href="#">Корзина</a>
+        <a href="#"><img src="img/cart-icon.svg" width="15" heigth="15" alt="Корзина">Корзина</a>
        </nav>
        <p>Магазин готовых шаблонов</p>
     </header>
@@ -38,22 +38,22 @@
         <h2>Каталог</h2>
         <ul>
           <li>
-            <img src="img/Goods1.jpg" width="360" heigth="576" alt="Сайт Седона">
+            <img src="img/Goods1.jpg" width="360" heigth="580" alt="Сайт Седона">
           </li>
           <li>
-            <img src="img/Goods2.jpg" width="360" heigth="576" alt="Сайт Pink">
+            <img src="img/Goods2.jpg" width="358" heigth="578" alt="Сайт Pink">
           </li>
           <li>
-            <img src="img/Goods3.jpg" width="360" heigth="576" alt="Сайт Барбершоп">
+            <img src="img/Goods3.jpg" width="358" heigth="578" alt="Сайт Барбершоп">
           </li>
           <li>
-            <img src="img/Goods4.jpg" width="360" heigth="576" alt="Сайт Mishka">
+            <img src="img/Goods4.jpg" width="358" heigth="578" alt="Сайт Mishka">
           </li>
           <li>
-            <img src="img/Goods5.jpg" width="360" heigth="576" alt="Сайт для обучения">
+            <img src="img/Goods5.jpg" width="358" heigth="578" alt="Сайт для обучения">
           </li>
           <li>
-            <img src="img/Goods6.jpg" width="360" heigth="576" alt="Сайт компании Кваст">
+            <img src="img/Goods6.jpg" width="358" heigth="578" alt="Сайт компании Кваст">
           </li>
         </ul>
         <ul>
@@ -69,6 +69,7 @@
       <section>
         <h2>Как нас найти</h2>
         <!--Карта-->
+        <img src="img/map 1.jpg" width="1440" heigth="416" alt="Карта">
         <div>
           <p>Nerds design studio</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
