--- a/index.html
+++ b/index.html
@@ -15,31 +15,31 @@
           <li><a href="#">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <a href="#">Корзина</a>
+        <a href="#"><img src="img/cart-icon.svg" width="15" heigth="15" alt="Корзина">Корзина</a>
        </nav>
        <section>
           <h2>Слайдер</h2>
           <p>Долго, дорого, скурпулезно</p>
           <p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
           <a href="#">Узнать больше</a>
-          <img src="img/index_slide1.jpg" width="760" heigth="431" alt="Слайд 1">
+          <img src="img/nerds-index-slide1 1.png" width="760" heigth="431" alt="Слайд 1">
        </section>
-      <!-- слайдер 2 + слайдер 3
+     <!--
         <section>
           <h2>Слайдер</h2>
           <p>Любим математику как никто другой</p>
           <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
           <a href="#">Узнать больше</a>
-          <img src="img/index_slide2.jpg" width="663" heigth="430" alt="Слайд 2">
+          <img src="img/nerds-index-slide2 1.png" width="663" heigth="430" alt="Слайд 2">
        </section>
        <section>
           <h2>Слайдер</h2>
           <p>Только ночь, только хардкор</p>
           <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
           <a href="#">Узнать больше</a>
-          <img src="img/index_slide3.jpg" width="759" heigth="411" alt="Слайд 2">
+          <img src="img/nerds-index-slide3 1.png" width="759" heigth="411" alt="Слайд 3">
        </section>
-      -->
+     -->
     </header>
 
     <main>
@@ -47,19 +47,19 @@
         <h2>Каталог</h2>
         <ul>
           <li>
-            <img src="img/illustration-1 1.jpg" width="300" heigth="146" alt="Вэб-сайты">
+            <img src="img/illustration-1 1.svg" width="300" heigth="146" alt="Вэб-сайты">
             <h3>Вэб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит наш сайт!</p>
             <a href="#">Заказать</a>
           </li>
           <li>
-            <img src="img/illustration-2 1.jpg" width="300" heigth="146" alt="Приложения">
+            <img src="img/illustration-2 1.svg" width="300" heigth="146" alt="Приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <a href="#">Заказать</a>
           </li>
           <li>
-            <img src="img/illustration-3 1.jpg" width="300" heigth="146" alt="Презентации">
+            <img src="img/illustration-3 1.svg" width="300" heigth="146" alt="Презентации">
             <h3>Презентации</h3>
             <p> Вы даже не подозреваете, насколько вы изумительны!</p>
             <a href="#">Заказать</a>
@@ -117,6 +117,7 @@
       <section>
         <h2>Как нас найти</h2>
         <!--Карта-->
+        <img src="img/map 1.jpg" width="1440" heigth=" 416" alt="Карта">
         <div>
           <p>Nerds design studio</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
