--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
     <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
     <header>
@@ -12,54 +13,54 @@
         <ul>
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
-          <li><a href="#">Магазин</a></li>
+          <li><a href="Catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
         <a href="#"><img src="img/cart-icon.svg" width="15" heigth="15" alt="Корзина">Корзина</a>
        </nav>
        <section>
-          <h2>Слайдер</h2>
+          <h2 class="visually-hidden"> Слайдер</h2>
           <p>Долго, дорого, скурпулезно</p>
           <p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
           <a href="#">Узнать больше</a>
-          <img src="img/nerds-index-slide1 1.png" width="760" heigth="431" alt="Слайд 1">
+          <img src="img/nerds-index-slide1 1.png" width="760" heigth="431" alt="Изображение слайда 1">
        </section>
      <!--
         <section>
-          <h2>Слайдер</h2>
+          <h2 class="visually-hidden">Слайдер</h2>
           <p>Любим математику как никто другой</p>
           <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
           <a href="#">Узнать больше</a>
-          <img src="img/nerds-index-slide2 1.png" width="663" heigth="430" alt="Слайд 2">
+          <img src="img/nerds-index-slide2 1.png" width="663" heigth="430" alt="Изображение слайда 2">
        </section>
        <section>
-          <h2>Слайдер</h2>
+          <h2 class="visually-hidden">Слайдер</h2>
           <p>Только ночь, только хардкор</p>
           <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
           <a href="#">Узнать больше</a>
-          <img src="img/nerds-index-slide3 1.png" width="759" heigth="411" alt="Слайд 3">
+          <img src="img/nerds-index-slide3 1.png" width="759" heigth="411" alt="Изображение слайда 3">
        </section>
      -->
     </header>
 
     <main>
       <section>
-        <h2>Каталог</h2>
+        <h2 class="visually-hidden">Каталог</h2>
         <ul>
           <li>
-            <img src="img/illustration-1 1.svg" width="300" heigth="146" alt="Вэб-сайты">
+            <img src="img/illustration-1 1.svg" width="300" heigth="146" alt="Изображение Вэб-сайта">
             <h3>Вэб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит наш сайт!</p>
             <a href="#">Заказать</a>
           </li>
           <li>
-            <img src="img/illustration-2 1.svg" width="300" heigth="146" alt="Приложения">
+            <img src="img/illustration-2 1.svg" width="300" heigth="146" alt="Изображение приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <a href="#">Заказать</a>
           </li>
           <li>
-            <img src="img/illustration-3 1.svg" width="300" heigth="146" alt="Презентации">
+            <img src="img/illustration-3 1.svg" width="300" heigth="146" alt="Изображение презентации">
             <h3>Презентации</h3>
             <p> Вы даже не подозреваете, насколько вы изумительны!</p>
             <a href="#">Заказать</a>
@@ -67,7 +68,7 @@
         </ul>
       </section>
       <section>
-        <h2>Описание</h2>
+        <h2 class="visually-hidden">Описание</h2>
         <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математически</p>
         <p>Выполняем заказы на разработку</p>
@@ -77,7 +78,7 @@
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
         <div>
-          <img src="img/nerds-illustration 1.jpg" width="360" heigth="140" alt="Нёрдс">
+          <img src="img/nerds-illustration 1.jpg" width="360" heigth="140" alt="Логотип Нёрдс">
           <p>С 2004 года Любим точность во всем:</p>
           <ul>
             <li>
@@ -95,7 +96,7 @@
         </div>
       </section>
       <section>
-        <h2>Партнеры</h2>
+        <h2 class="visually-hidden">Партнеры</h2>
         <ul>
           <li>
             <img src="img/Group 5.svg" width="199" heigth="68" alt="Логотип HTML academy">
@@ -115,7 +116,7 @@
 
     <footer>
       <section>
-        <h2>Как нас найти</h2>
+        <h2 class="visually-hidden">Как нас найти</h2>
         <!--Карта-->
         <img src="img/map 1.jpg" width="1440" heigth=" 416" alt="Карта">
         <div>
@@ -130,7 +131,7 @@
         </div>
       </section>
       <section>
-        <h2>Странички в соц сетях</h2>
+        <h2 class="visually-hidden">Странички в соц сетях</h2>
         <ul>
           <li>
             <img src="img/Vk_logo.svg" width="26" height="15" alt="Nerds в Контакте">
@@ -150,9 +151,24 @@
       </section>
     </footer>
     <section>
-      <h2>Напишите нам</h2>
-      <!--Форма-->
-      <button type="button">Отправить</button>
+      <h2 class="visually-hidden">Напишите нам</h2>
+      <form action="https://echo.htmlacademy.ru" method="post">
+        <h2>Напишите нам</h2>
+        <button type="button">Закрыть</button>
+        <p>
+          <label for="write_us_name">Ваше имя:</label>
+          <input id="wtire_us_name" type="text" name="name" placeholder="Имя Фамилия">
+        </p>
+        <p>
+          <label for="write_us_email">Ваш e-mail:</label>
+          <input id="wtire_us_email" type="email" name="email" placeholder="email@example.com">
+        </p>
+        <p>
+          <label for="write_us_text">Текст письма:</label>
+          <input id="wtire_us_email" type="text" name="write_text" placeholder="В свободной форме">
+        </p>
+        <button type="submit">Отправить</button>
+      </form>
     </section>
   </body>
 </html>
