--- a/index.html
+++ b/index.html
@@ -3,27 +3,30 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    <link rel="stylesheet" href="css/normalize.css">
-    <link rel="stylesheet" href="css/style.css">
+    
+    <link href="../1251825-nerds-28/css/Style.css" rel="stylesheet">
+    <link rel="stylesheet" href="../1251825-nerds-28/css/normalize.css" >
   </head>
   <body>
     <header>
       <nav>
-        <img src="img/nerds-logo.svg" width="160" heigth="65" alt="Логотип Нёрдс">
+        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
         <ul>
           <li><a href="#">Студия</a></li>
           <li><a href="#">Клиенты</a></li>
           <li><a href="Catalog.html">Магазин</a></li>
           <li><a href="#">Контакты</a></li>
         </ul>
-        <a href="#"><img src="img/cart-icon.svg" width="15" heigth="15" alt="Корзина">Корзина</a>
+        <a href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
        </nav>
+    </header>
+    <main>
        <section>
           <h2 class="visually-hidden"> Слайдер</h2>
           <p>Долго, дорого, скурпулезно</p>
           <p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
           <a href="#">Узнать больше</a>
-          <img src="img/nerds-index-slide1 1.png" width="760" heigth="431" alt="Изображение слайда 1">
+          <img src="img/nerds-index-slide1.png" width="760" height="431" alt="Изображение слайда 1">
        </section>
      <!--
         <section>
@@ -31,36 +34,33 @@
           <p>Любим математику как никто другой</p>
           <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
           <a href="#">Узнать больше</a>
-          <img src="img/nerds-index-slide2 1.png" width="663" heigth="430" alt="Изображение слайда 2">
+          <img src="img/nerds-index-slide2.png" width="663" heigth="430" alt="Изображение слайда 2">
        </section>
        <section>
           <h2 class="visually-hidden">Слайдер</h2>
           <p>Только ночь, только хардкор</p>
           <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
           <a href="#">Узнать больше</a>
-          <img src="img/nerds-index-slide3 1.png" width="759" heigth="411" alt="Изображение слайда 3">
+          <img src="img/nerds-index-slide3.png" width="759" heigth="411" alt="Изображение слайда 3">
        </section>
      -->
-    </header>
-
-    <main>
       <section>
         <h2 class="visually-hidden">Каталог</h2>
         <ul>
           <li>
-            <img src="img/illustration-1 1.svg" width="300" heigth="146" alt="Изображение Вэб-сайта">
+            <img src="img/illustration-1.svg" width="300" height="146" alt="Изображение Вэб-сайта">
             <h3>Вэб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит наш сайт!</p>
             <a href="#">Заказать</a>
           </li>
           <li>
-            <img src="img/illustration-2 1.svg" width="300" heigth="146" alt="Изображение приложения">
+            <img src="img/illustration-2.svg" width="300" height="146" alt="Изображение приложения">
             <h3>Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
             <a href="#">Заказать</a>
           </li>
           <li>
-            <img src="img/illustration-3 1.svg" width="300" heigth="146" alt="Изображение презентации">
+            <img src="img/illustration-3.svg" width="300" height="146" alt="Изображение презентации">
             <h3>Презентации</h3>
             <p> Вы даже не подозреваете, насколько вы изумительны!</p>
             <a href="#">Заказать</a>
@@ -78,7 +78,7 @@
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
         <div>
-          <img src="img/nerds-illustration 1.jpg" width="360" heigth="140" alt="Логотип Нёрдс">
+          <img src="img/nerds-illustration1.jpg" width="360" height="208" alt="Логотип Нёрдс">
           <p>С 2004 года Любим точность во всем:</p>
           <ul>
             <li>
@@ -99,16 +99,16 @@
         <h2 class="visually-hidden">Партнеры</h2>
         <ul>
           <li>
-            <img src="img/Group 5.svg" width="199" heigth="68" alt="Логотип HTML academy">
+            <img src="img/Group5.svg" width="199" height="68" alt="Логотип HTML academy">
           </li>
           <li>
-            <img src="img/logo-2 1.svg" width="209" heigth="90" alt="Логотип Барбершоп Бородинский">
+            <img src="img/logo-2.svg" width="209" height="90" alt="Логотип Барбершоп Бородинский">
           </li>
           <li>
-            <img src="img/logo-3 1.svg" width="185" heigth="52" alt="Логотип Пинк">
+            <img src="img/logo-3.svg" width="185" height="52" alt="Логотип Пинк">
           </li>
           <li>
-            <img src="img/logo-4 1.svg" width="173" heigth="84" alt="Логотип Mishka">
+            <img src="img/logo-4.svg" width="173" height="84" alt="Логотип Mishka">
           </li>
         </ul>
       </section>
@@ -118,7 +118,7 @@
       <section>
         <h2 class="visually-hidden">Как нас найти</h2>
         <!--Карта-->
-        <img src="img/map 1.jpg" width="1440" heigth=" 416" alt="Карта">
+        <img src="img/map1.jpg" width="1440" height="416" alt="Карта">
         <div>
           <p>Nerds design studio</p>
           <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
@@ -150,6 +150,7 @@
         <p>Скидка 10% для друзей из социальных сетей.</p>
       </section>
     </footer>
+    
     <section>
       <h2 class="visually-hidden">Напишите нам</h2>
       <form action="https://echo.htmlacademy.ru" method="post">
@@ -157,15 +158,15 @@
         <button type="button">Закрыть</button>
         <p>
           <label for="write_us_name">Ваше имя:</label>
-          <input id="wtire_us_name" type="text" name="name" placeholder="Имя Фамилия">
+          <input id="write_us_name" type="text" name="name" placeholder="Имя Фамилия">
         </p>
         <p>
           <label for="write_us_email">Ваш e-mail:</label>
-          <input id="wtire_us_email" type="email" name="email" placeholder="email@example.com">
+          <input id="write_us_email" type="email" name="email" placeholder="email@example.com">
         </p>
         <p>
           <label for="write_us_text">Текст письма:</label>
-          <input id="wtire_us_email" type="text" name="write_text" placeholder="В свободной форме">
+          <input id="write_us_text" type="text" name="write_text" placeholder="В свободной форме">
         </p>
         <button type="submit">Отправить</button>
       </form>
