Lesson 5 (index.html)
Index.html

--- a/Catalog.html
+++ b/Catalog.html
@@ -3,7 +3,7 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;700&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="../1251825-nerds-28/css/Style.css">
     <link rel="stylesheet" href="../1251825-nerds-28/css/normalize.css">
 
