--- a/index.html
+++ b/index.html
@@ -3,40 +3,47 @@
   <head>
     <meta charset="utf-8">
     <title>HTML Academy: Нёрдс</title>
-    
+    <link href="https://fonts.googleapis.com/css2?family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
     <link href="../1251825-nerds-28/css/Style.css" rel="stylesheet">
     <link rel="stylesheet" href="../1251825-nerds-28/css/normalize.css" >
   </head>
+
   <body>
-    <header>
-      <nav>
-        <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
-        <ul>
-          <li><a href="#">Студия</a></li>
-          <li><a href="#">Клиенты</a></li>
-          <li><a href="Catalog.html">Магазин</a></li>
-          <li><a href="#">Контакты</a></li>
-        </ul>
-        <a href="#"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
-       </nav>
+    <header class="main-header container-size">
+      <nav class="main-navigation">
+          <a class="main-header-logo">
+            <img src="img/nerds-logo.svg" width="160" height="65" alt="Логотип Нёрдс">
+          </a>
+          <div class="container">
+            <ul class="site-navigation">
+              <li><a href="#">Студия</a></li>
+              <li><a href="#">Клиенты</a></li>
+              <li><a href="Catalog.html">Магазин</a></li>
+              <li><a href="#">Контакты</a></li>
+          </ul>
+          <div class="user-navigation">
+            <a class="login-link" href="login.html"><img src="img/cart-icon.svg" width="15" height="15" alt="Корзина">Корзина</a>
+          </div>
+      </nav>
     </header>
+
     <main>
-       <section>
+       <section class="slider-container container-size">
           <h2 class="visually-hidden"> Слайдер</h2>
-          <p>Долго, дорого, скурпулезно</p>
+          <p class="slider-big">Долго, дорого, скурпулезно</p>
           <p>Математически выверенный дизайн  для вашего сайта или мобильного приложения</p>
-          <a href="#">Узнать больше</a>
+          <a class="gb_properties slider-button" href="#">Узнать больше</a>
           <img src="img/nerds-index-slide1.png" width="760" height="431" alt="Изображение слайда 1">
        </section>
      <!--
-        <section>
+        <section class="slider-container container-size">
           <h2 class="visually-hidden">Слайдер</h2>
           <p>Любим математику как никто другой</p>
           <p>Никакого креатива, только математические формулы для расчета идеальных пропорций.</p>
           <a href="#">Узнать больше</a>
           <img src="img/nerds-index-slide2.png" width="663" heigth="430" alt="Изображение слайда 2">
        </section>
-       <section>
+       <section class="slider-container container-size">
           <h2 class="visually-hidden">Слайдер</h2>
           <p>Только ночь, только хардкор</p>
           <p>Работать днем, как все? Мы против этого. Ближе к полуночи работа только начинается.</p>
@@ -44,71 +51,78 @@
           <img src="img/nerds-index-slide3.png" width="759" heigth="411" alt="Изображение слайда 3">
        </section>
      -->
-      <section>
+      <section class="catalog-container container-size">
         <h2 class="visually-hidden">Каталог</h2>
         <ul>
           <li>
             <img src="img/illustration-1.svg" width="300" height="146" alt="Изображение Вэб-сайта">
-            <h3>Вэб-сайты</h3>
+            <h3 class="catalog-item">Вэб-сайты</h3>
             <p>Мир никогда не будет прежним после того как увидит наш сайт!</p>
-            <a href="#">Заказать</a>
+            <a class="gb_properties catalog-button button-red" href="#">Заказать</a>
           </li>
           <li>
             <img src="img/illustration-2.svg" width="300" height="146" alt="Изображение приложения">
-            <h3>Приложения</h3>
+            <h3 class="catalog-item">Приложения</h3>
             <p>Покорите топ-10 приложений в AppStore и Google Play</p>
-            <a href="#">Заказать</a>
+            <a class="gb_properties catalog-button button-green" href="#">Заказать</a>
           </li>
           <li>
             <img src="img/illustration-3.svg" width="300" height="146" alt="Изображение презентации">
-            <h3>Презентации</h3>
+            <h3 class="catalog-item">Презентации</h3>
             <p> Вы даже не подозреваете, насколько вы изумительны!</p>
-            <a href="#">Заказать</a>
+            <a class="gb_properties catalog-button button-yellow" href="#">Заказать</a>
           </li>
         </ul>
       </section>
-      <section>
+      <section class="description container-size">
         <h2 class="visually-hidden">Описание</h2>
-        <p>Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
+        <p class="description-big">Мы — маленькая, но гордая дизайн-студия из Краснодара.</p>
         <p>Исповедуем принципы минимализма и чистоты. Ставим математически</p>
-        <p>Выполняем заказы на разработку</p>
-        <ul>
+        <p class="description_order">Выполняем заказы на разработку:</p>
+        <ul class="description_list">
           <li>Веб-сайтов любой сложности</li>
           <li>Мобильных приложений для iOS и Android</li>
           <li>Слайдшоу и видео для корпоративных презентаций</li>
         </ul>
-        <div>
+        <div class="description_statistic">
           <img src="img/nerds-illustration1.jpg" width="360" height="208" alt="Логотип Нёрдс">
-          <p>С 2004 года Любим точность во всем:</p>
-          <ul>
+          <p class="description_order">С 2004 года Любим точность во всем:</p>
+          <ul class="description_list">
             <li>
-              146 % <p>Уровень самоотдачи</p>
+              <span class="number">146 
+                <span class="sup_number"><sup >%</sup></span>
+              </span>
+              <p class="advantages">Уровень самоотдачи</p>
             </li>
             <li>
-              100 %
-              <p>Уровень самоотдачи</p>
+              <span class="number">100
+                <span class="sup_number"><sup>%</sup></span>
+              </span>
+              <p class="advantages">Уровень самоотдачи</p>
             </li>
             <li>
-              50 %
-              <p>Минимальная предоплата</p>
+              <span class="number">50
+                <span class="sup_number"><sup>%</sup></span>
+              </span>
+              <p class="advantages">Минимальная предоплата</p>
             </li>
           </ul>
         </div>
       </section>
-      <section>
+      <section class="container-size">
         <h2 class="visually-hidden">Партнеры</h2>
         <ul>
           <li>
-            <img src="img/Group5.svg" width="199" height="68" alt="Логотип HTML academy">
+            <img class="partner_logo" src="img/Group5.png" width="199" height="68" alt="Логотип HTML academy">
           </li>
           <li>
-            <img src="img/logo-2.svg" width="209" height="90" alt="Логотип Барбершоп Бородинский">
+            <img class="partner_logo" src="img/logo-2.png" width="209" height="90" alt="Логотип Барбершоп Бородинский">
           </li>
           <li>
-            <img src="img/logo-3.svg" width="185" height="52" alt="Логотип Пинк">
+            <img  class="partner_logo" src="img/logo-3.png" width="185" height="52" alt="Логотип Пинк">
           </li>
           <li>
-            <img src="img/logo-4.svg" width="173" height="84" alt="Логотип Mishka">
+            <img  class="partner_logo" src="img/logo-4.png" width="173" height="84" alt="Логотип Mishka">
           </li>
         </ul>
       </section>
@@ -120,10 +134,10 @@
         <!--Карта-->
         <img src="img/map1.jpg" width="1440" height="416" alt="Карта">
         <div>
-          <p>Nerds design studio</p>
-          <p>191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
+          <p class="map_card_header">Nerds design studio</p>
+          <p class="card_text">191186, Санкт-Петербург, ул. Б. Конюшенная, д. 19/8<br>
           тел. +7(812)275-75-75</p>
-          <button type="button">Напишите нам</button>
+          <button class="map_button" type="button">Напишите нам</button>
           <!--
             Псевдоэлемент
             <img src="img/map-marker1.svg" width="231" heigth="190" alt="расположение офиса Nerds на карте">
@@ -133,42 +147,45 @@
       <section>
         <h2 class="visually-hidden">Странички в соц сетях</h2>
         <ul>
-          <li>
-            <img src="img/Vk_logo.svg" width="26" height="15" alt="Nerds в Контакте">
-            <span>Vk</span>
+          <li class="logo_background logo-vk">
+            <a href="#">
+              <span class="visually-hidden">Vk</span>
+            </a>
           </li>
-          <li>
-            <img src="img/f_logo.svg" width="12" height="22" alt="Nerds на Фэйсбук">
-            <span>F</span>
+          <li class="logo_background logo-f">
+            <a href="#">
+              <span class="visually-hidden">F</span>
+            </a>
           </li>
-          <li>
-            <img src="img/insta-logo.svg" width="21" height="21" alt="Nerds В Instagram">
-            <span>I</span>
-          </li>
+          <li class="logo_background logo-i">
+            <a href="#">
+              <span class="visually-hidden">I</span>
+            </a>
+            </li>
         </ul>
-        <p>Давайте дружить, это выгодно!</p>
-        <p>Скидка 10% для друзей из социальных сетей.</p>
+        <p class="friendship">Давайте дружить, это выгодно!</p>
+        <p class="friendship_content">Скидка 10% для друзей из социальных сетей.</p>
       </section>
     </footer>
     
     <section>
       <h2 class="visually-hidden">Напишите нам</h2>
       <form action="https://echo.htmlacademy.ru" method="post">
-        <h2>Напишите нам</h2>
-        <button type="button">Закрыть</button>
+        <h2 class="popup_header">Напишите нам</h2>
+        <button class="popup_close" type="button"></button>
         <p>
-          <label for="write_us_name">Ваше имя:</label>
-          <input id="write_us_name" type="text" name="name" placeholder="Имя Фамилия">
+          <label class="popup_text" for="write_us_name">Ваше имя:</label>
+          <input class="input_style" id="write_us_name" type="text" name="name" placeholder="Имя Фамилия">
         </p>
         <p>
-          <label for="write_us_email">Ваш e-mail:</label>
-          <input id="write_us_email" type="email" name="email" placeholder="email@example.com">
+          <label class="popup_text" for="write_us_email">Ваш e-mail:</label>
+          <input class="input_style" id="write_us_email" type="email" name="email" placeholder="email@example.com">
         </p>
         <p>
-          <label for="write_us_text">Текст письма:</label>
-          <input id="write_us_text" type="text" name="write_text" placeholder="В свободной форме">
+          <label class="popup_text" for="write_us_text">Текст письма:</label>
+          <input class="input_style input_letter" id="write_us_text" type="text" name="write_text" placeholder="В свободной форме">
         </p>
-        <button type="submit">Отправить</button>
+        <button class="map_button popup_button" type="submit">Отправить</button>
       </form>
     </section>
   </body>
